# company

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
project/: urls.py
project/apps/core/utils/: admin.py  models.py
project/apps/departments/: admin.py  apps.py  models.py  tests.py  views.py
project/apps/departments/migrations/: 0001_initial.py
project/apps/departments/models/: __init__.py  department.py  position.py
project/apps/departments/serializers/: __init__.py  department.py
project/apps/employees/: admin.py  apps.py  models.py  views.py
project/apps/employees/filters/: __init__.py  employee.py
project/apps/employees/migrations/: 0001_initial.py
project/apps/employees/models/: __init__.py  employee.py
project/apps/employees/serializers/: __init__.py
project/restapi/v1/: urls.py
project/restapi/v1/filters/: __init__.py
project/restapi/v1/serializers/: __init__.py  department.py  employee.py
project/restapi/v1/views/: __init__.py  department.py  employee.py
project/settings/: base.py
